# cuda-of-life

./: .gitignore  CMakeLists.txt  calculator-functions.cu  calculator.cu  converters.cu  devInfo.c  generate_table.cxx  kafrila.c  kafrila2.c  main.cu  utils.cpp  utils.h
2D_shared/: calculator.cu  devInfo.c
2D_shared/code_includes/: kafrila.c
bboard1x64/: calculator.cu  converters.cu  generate_table.cxx  main.cu  utils.cpp
bboard1x64-shared/: CMakeLists.txt  calculator.cu  main.cu  utils.h
bboard2d/: CMakeLists.txt  calculator.cu  calculator_no_rem.cu  main.cu  utils.cpp  utils.h
bboard2d-shared/: CMakeLists.txt  calculator.cu  calculator_no_rem.cu  main.cu  utils.cpp
bboard2d-shared/code_includes/: calculator-functions.cu
bboard2d/code_includes/: calculator-functions.cu  outter_loop.c
bboard2d/tests/: testconv.cu
code_includes/: calculator-functions.cu  kafrila.c  kafrila_jlim.c
cpu/: omp.c  single.c
doc/: code-explanation.tex  intro.tex  preamble.tex  report.tex  results.tex
simple/: cuda.cu  omp.c  single.c  utils.c
single/: cpu1.c  cuda-single.cu  omp.c  utils.c  utils.h
